--- a/INSTALL
+++ b/INSTALL
@@ -1,17 +1,6 @@
 List-Prefixed version 0.01
 ==========================
 
-The README is used to introduce the module and provide instructions on
-how to install the module, any machine dependencies it may have (for
-example C compilers and installed libraries) and any other information
-that should be provided before the module is installed.
-
-A README file is required for CPAN modules since CPAN extracts the
-README file from a module distribution so that people browsing the
-archive can use it get an idea of the modules uses. It is usually a
-good idea to provide version information here so that people can
-decide whether fixes for the module are worth downloading.
-
 INSTALLATION
 
 To install this module type the following:
@@ -21,17 +10,25 @@ To install this module type the following:
    make test
    make install
 
+NOTE
+
+Re-generate README files from embedded pod documentation:
+
+   make readme
+
 DEPENDENCIES
 
-This module requires these other modules and libraries:
+This module currently requires no other modules and libraries.
 
-  blah blah blah
+REPOSITORY
+
+https://github.com/boethin/List-Prefixed
 
 COPYRIGHT AND LICENCE
 
 Put the correct copyright and licence information here.
 
-Copyright (C) 2015 by A. U. Thor
+Copyright (C) 2015 by Sebastian Böthin <boethin@xn--domain.net>
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself, either Perl version 5.14.2 or,
