--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 NAME
-    List::Prefixed - Prefixed string list implementation
+    List::Prefixed - Prefixed String List
 
 SYNOPSIS
       use List::Prefixed;
@@ -17,8 +17,8 @@ SYNOPSIS
       $unfolded = List::Prefixed->unfold($regex);
 
 DESCRIPTION
-    The idea of Prefixed Lists comes from regular expressions determining a
-    finite list of words, like this:
+    The idea of a *Prefixed List* comes from regular expressions determining
+    a finite list of words, like this:
 
       /(?:Ba(?:r|z)?|F(?:o(?:o(?:d|t)?|r(?:m)?)|u))/
 
@@ -26,12 +26,12 @@ DESCRIPTION
 
       "Ba", "Bar", "Baz", "Foo", "Food", "Foot", "For", "Form", "Fu".
 
-    Representing a string list that way may have some advantages in certain
+    Representing a string list that way can have some advantages in certain
     situations:
 
-    *   The representation as a regular expression provides efficient
-        methods to test whether or not an arbitrary string starts or ends
-        with an element from the list or is contained in the list itself.
+    *   The regular expression provides efficient test methods on arbitrary
+        strings (e.g. whether or not a string is contained in the list or
+        starts or ends with an element from the list).
 
     *   The representaion is compressing, depending on how many shared
         prefixes appear in a list.
@@ -44,6 +44,29 @@ DESCRIPTION
         prefixed list. This leads to an efficient implementation of
         auto-completion.
 
+    A *Prefixed List* is a tree consisting of node triples, formally defined
+    as follows:
+
+      node: ( prefix [node-list] opt )
+        where:
+          prefix: String
+          node-list: List of node
+          opt: Boolean
+
+    The list elements are the prefix strings, each of them appended to the
+    prefix of the parent node. The "opt" flag is true if the list of sub
+    nodes is optional, i.e., if the node prefix appended together with the
+    parent prefixes is also contained in the list itself.
+
+    Any string list has a trivial representation that way, if one takes each
+    string as the prefix of a node with empty node-list and collects all
+    these nodes into a parent node with empty prefix.
+
+    A prefixed tree is called *folded*, if it's in minimal form, i.e. if
+    there are no two child nodes in a parent node sharing a common left part
+    in their prefixes. Obviously, for each string list, there exists a
+    unique folded Prefixed Tree representation.
+
 METHODS
   new
       $prefixed = List::Prefixed->new( @list );
@@ -53,21 +76,22 @@ METHODS
   fold
       $prefixed = List::Prefixed->fold( @list );
 
-    Constructs a new List::Prefixed tree from the given string list.
+    Constructs a new folded "List::Prefixed" tree from the given string
+    list.
 
   unfold
       $prefixed = List::Prefixed->unfold( $regex );
 
-    Constructs a new List::Prefixed tree from a regular expression string.
+    Constructs a new "List::Prefixed" tree from a regular expression string.
     The string argument shuld be obtained from the regex method.
 
   list
       @list = $prefixed->list;
       @list = $prefixed->list( $string );
 
-    Returns the list of strings starting with the given argument if a string
-    argument is present or the whole list otherwise. In scalar context an
-    ARRAY reference is returned.
+    Returns the list of list elements starting with the given string if a
+    string argument is present or the whole list otherwise. In scalar
+    context an ARRAY reference is returned.
 
   regex
       $regex = $prefixed->regex;
@@ -76,10 +100,11 @@ METHODS
     strings the object has been constructed with.
 
     You can control the escaping style of the expression. The default
-    behavior is to apply Perl's quotemeta function and replace any non-ASCII
-    character with "\x{FFFF}", where "FFFF" is the hexadecimal character
-    code. This is the Perl-compatible or PCRE style. To obtain an expression
-    compatible with Java and the like, use
+    behavior is to apply Perl's quotemeta
+    <http://perldoc.perl.org/functions/quotemeta.html> function and replace
+    any non-ASCII character with "\x{FFFF}", where "FFFF" is the hexadecimal
+    character code. This is the Perl-compatible or PCRE style. To obtain an
+    expression compatible with Java and the like, use
 
       use List::Prefixed uc_escape_style => 'Java'; # \uFFFF style
 
@@ -88,12 +113,12 @@ METHODS
       use List::Prefixed uc_escape_style => undef;  # do not escape
 
     Alternatively, you can control the style at runtime by way of
-    CONFIGURATION VARIABLES.
+    configuration variables.
 
 CONFIGURATION VARIABLES
     *$UC_ESCAPE_STYLE*
-        Control the escaping style for Unicode (non-ASCII) characters. The
-        value can be ono of the following:
+        Controls the escaping style for Unicode (non-ASCII) characters. The
+        value can be one of the following:
 
         *'PCRE'*
             Default style "\x{FFFF}"
@@ -106,10 +131,9 @@ CONFIGURATION VARIABLES
             shorter expressions but may cause encoding issues under some
             circumstances.
 
-        *$REGEX_ESCAPE*, *$REGEX_UNESCAPE*
-            By providing string functions one can customize the escaping
-            behavior arbitrarily. In this case, $UC_ESCAPE_STYLE has no
-            effect.
+    *$REGEX_ESCAPE*, *$REGEX_UNESCAPE*
+        By providing string functions one can customize the escaping
+        behavior arbitrarily. In this case, $UC_ESCAPE_STYLE has no effect.
 
 EXPORT
     Strictly OO, exports nothing.
