KNOWN BUGS added

--- a/README
+++ b/README
@@ -135,6 +135,12 @@ CONFIGURATION VARIABLES
         By providing string functions one can customize the escaping
         behavior arbitrarily. In this case, $UC_ESCAPE_STYLE has no effect.
 
+KNOWN BUGS
+    The term *prefix* refers to the storage order of characters. That is,
+    prefix filtering with right-to-left written Unicode strings (such as
+    Arabaic or Heberew) goes to the wrong direction from the user's point of
+    view.
+
 EXPORT
     Strictly OO, exports nothing.
 
