--- a/Changes
+++ b/Changes
@@ -7,3 +7,6 @@ Revision history for Perl extension List::Prefixed.
 0.01  Tue Mar  3 21:41:33 CET 2015
 	- Stable version
 
+0.02  Mi 4. Mär 16:22:46 CET 2015
+	- Added large tests (a regex matching all Perl module names)
+
