--- a/Changes
+++ b/Changes
@@ -10,3 +10,6 @@ Revision history for Perl extension List::Prefixed.
 0.02  Mi 4. Mär 16:22:46 CET 2015
 	- Added large tests (a regex matching all Perl module names)
 
+0.03  Wed Mar  4 21:56:29 CET 2015
+	- fixed large list tests
+
